--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "discord.js": "^11.0.0",
+    "emojis-list": "^2.1.0",
     "node-opus": "^0.2.4"
   },
   "devDependencies": {},
