--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "shevbot",
-  "version": "2.0.0",
+  "version": "2.3.1",
   "description": "Discord bot by Owen Shevlin",
-  "main": "ShevBot.js",
+  "main": "main.js",
   "bin": {
     "shevbot": "ShevBot-0.1.js"
   },
   "dependencies": {
     "discord.js": "^11.0.0",
     "emojis-list": "^2.1.0",
-    "node-opus": "^0.2.4"
+    "node-opus": "^0.2.4",
+    "installed-packages": "^0.9.4",
+    "request": "^2.81.0",
+    "youtube-node": "1.3.0",
+    "moniker": "0.1.2",
+    "casual": "^1.5.12",
+    "syntax-error": "^1.3.0",
+    "node-datetime":"^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
