--- a/package.json
+++ b/package.json
@@ -4,21 +4,20 @@
   "description": "Discord bot by Owen Shevlin",
   "main": "main.js",
   "bin": {
-    "shevbot": "ShevBot-0.1.js"
+    "shevbot": "ShevBot.js"
   },
   "dependencies": {
-    "discord.js": "^11.0.0",
-    "emojis-list": "^2.1.0",
-    "node-opus": "^0.2.4",
-    "installed-packages": "^0.9.4",
-    "request": "^2.81.0",
-    "youtube-node": "1.3.0",
-    "moniker": "0.1.2",
-    "casual": "^1.5.12",
-    "syntax-error": "^1.3.0",
-    "node-datetime":"^2.0.0"
+    "@discordjs/opus": "^0.4.0",
+    "casual": "^1.6.2",
+    "discord.js": "^12.5.1",
+    "emojis-list": "^3.0.0",
+    "installed-packages": "^1.0.9",
+    "moniker": "^0.1.2",
+    "node-datetime": "^2.1.2",
+    "request": "^2.88.2",
+    "syntax-error": "^1.4.0",
+    "youtube-node": "^1.3.3"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
