--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "core/main.js",
   "dependencies": {
     "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0",
     "emojis-list": "^3.0.0"
   },
   "scripts": {
