--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "applicationinsights": "^1.8.10",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "emojis-list": "^3.0.0"
+    "emojis-list": "^3.0.0",
+    "express": "^4.17.1"
   },
   "scripts": {
     "run": "npm core/main.js"
