--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "emojis-list": "^3.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "handlebars": "^4.7.7"
   },
   "scripts": {
     "run": "npm core/main.js"
