Updated to Discord v14, fixed occasional shitpost

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@azure/storage-blob": "^12.8.0",
     "applicationinsights": "^1.8.10",
     "axios": "^0.27.2",
-    "discord.js": "^12.5.1",
+    "discord.js": "14.0.3",
     "dotenv": "^8.2.0",
     "emojis-list": "^3.0.0",
     "express": "^4.17.1",
